y.output
Terminals unused in grammar

   '|'
   '^'
   CASE
   CONTINUE
   DEFAULT
   DO
   ENUM
   FOR
   SIZEOF
   STATIC
   STRUCT
   SWITCH
   TYPEDEF
   UNION


Grammar

    0 $accept: S $end

    1 S: func_def S
    2  | multidec ';' S
    3  | %empty

    4 func_def: modifiers datatype IDENTIFIER '(' params_list ')' '{' statement_list '}'
    5         | modifiers datatype IDENTIFIER '(' ')' '{' statement_list '}'
    6         | modifiers datatype IDENTIFIER '(' params_list ')' ';'
    7         | modifiers datatype IDENTIFIER '(' ')' ';'
    8         | modifiers datatype '*' IDENTIFIER '(' params_list ')' '{' statement_list '}'
    9         | modifiers datatype '*' IDENTIFIER '(' ')' '{' statement_list '}'
   10         | modifiers datatype '*' IDENTIFIER '(' params_list ')' ';'
   11         | modifiers datatype '*' IDENTIFIER '(' ')' ';'

   12 multidec: modifiers datatype id_chain

   13 datatype: INT
   14         | FLOAT
   15         | CHAR
   16         | DOUBLE
   17         | VOID
   18         | LONG
   19         | SHORT

   20 modifiers: AUTO
   21          | CONST
   22          | EXTERN
   23          | REGISTER
   24          | SIGNED
   25          | UNSIGNED
   26          | VOLATILE
   27          | %empty

   28 params_dec: modifiers datatype IDENTIFIER
   29           | modifiers datatype IDENTIFIER '[' INTCONST ']'
   30           | modifiers datatype IDENTIFIER '[' ']'
   31           | modifiers datatype '*' IDENTIFIER

   32 params_list: params_dec
   33            | params_dec ',' params_list

   34 brackets: '(' expression ')'

   35 expression: constant

   36 $@1: %empty

   37 expression: expression '+' $@1 expression

   38 $@2: %empty

   39 expression: expression '*' $@2 expression

   40 $@3: %empty

   41 expression: expression '-' $@3 expression

   42 $@4: %empty

   43 expression: expression '/' $@4 expression

   44 $@5: %empty

   45 expression: expression '>' $@5 expression

   46 $@6: %empty

   47 expression: expression '<' $@6 expression

   48 $@7: %empty

   49 expression: expression AND $@7 expression

   50 $@8: %empty

   51 expression: expression OR $@8 expression

   52 $@9: %empty

   53 expression: expression EQUAL $@9 expression

   54 $@10: %empty

   55 expression: expression GREATER $@10 expression

   56 $@11: %empty

   57 expression: expression LESSER $@11 expression

   58 @12: %empty

   59 expression: expression NOTEQUAL @12 expression
   60           | IDENTIFIER
   61           | un_op IDENTIFIER
   62           | '-' IDENTIFIER
   63           | un_op constant
   64           | '-' constant
   65           | INCREMENT IDENTIFIER
   66           | DECREMENT IDENTIFIER
   67           | IDENTIFIER INCREMENT
   68           | IDENTIFIER DECREMENT
   69           | func_call
   70           | un_op func_call
   71           | brackets
   72           | un_op brackets
   73           | IDENTIFIER '[' expression ']'
   74           | un_op IDENTIFIER '[' expression ']'
   75           | IDENTIFIER '[' expression ']' INCREMENT
   76           | IDENTIFIER '[' expression ']' DECREMENT

   77 const_list: constant
   78           | constant ',' const_list

   79 statement_list: statement
   80               | statement statement_list

   81 constant: INTCONST
   82         | STRCONST
   83         | FLTCONST
   84         | CHARCONST

   85 un_op: '!'
   86      | '+'
   87      | '*'
   88      | '&'

   89 func_call: IDENTIFIER '(' expression_list ')'
   90          | IDENTIFIER '(' ')'

   91 expression_list: expression
   92                | expression ',' expression_list

   93 statement: multidec ';'
   94          | conditional
   95          | iterative
   96          | assignment
   97          | RETURN expression ';'
   98          | func_call ';'
   99          | func_def
  100          | IDENTIFIER INCREMENT ';'
  101          | IDENTIFIER DECREMENT ';'
  102          | INCREMENT IDENTIFIER ';'
  103          | DECREMENT IDENTIFIER ';'
  104          | '{' statement_list '}'
  105          | ';'
  106          | BREAK ';'

  107 id_chain: IDENTIFIER
  108         | IDENTIFIER '=' expression
  109         | '*' IDENTIFIER
  110         | id_chain ',' '*' IDENTIFIER
  111         | '*' IDENTIFIER '=' expression
  112         | id_chain ',' '*' IDENTIFIER '=' expression
  113         | id_chain ',' IDENTIFIER '=' expression
  114         | id_chain ',' IDENTIFIER
  115         | IDENTIFIER '[' INTCONST ']'
  116         | IDENTIFIER '[' ']' '=' '{' const_list '}'
  117         | IDENTIFIER '[' INTCONST ']' '=' '{' const_list '}'
  118         | id_chain ',' IDENTIFIER '[' INTCONST ']'
  119         | id_chain ',' IDENTIFIER '[' ']' '=' '{' const_list '}'
  120         | id_chain ',' IDENTIFIER '[' INTCONST ']' '=' '{' const_list '}'

  121 conditional: ifblock
  122            | ifblock ELSE statement

  123 $@13: %empty

  124 ifblock: IF '(' expression ')' $@13 statement

  125 $@14: %empty

  126 $@15: %empty

  127 $@16: %empty

  128 iterative: WHILE $@14 '(' expression ')' $@15 statement $@16

  129 assignment: IDENTIFIER '=' expression ';'
  130           | '*' IDENTIFIER '=' expression ';'
  131           | IDENTIFIER '[' expression ']' '=' expression ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 85
'$' (36)
'&' (38) 88
'(' (40) 4 5 6 7 8 9 10 11 34 89 90 124 128
')' (41) 4 5 6 7 8 9 10 11 34 89 90 124 128
'*' (42) 8 9 10 11 31 39 87 109 110 111 112 130
'+' (43) 37 86
',' (44) 33 78 92 110 112 113 114 118 119 120
'-' (45) 41 62 64
'/' (47) 43
';' (59) 2 6 7 10 11 93 97 98 100 101 102 103 105 106 129 130 131
'<' (60) 47
'=' (61) 108 111 112 113 116 117 119 120 129 130 131
'>' (62) 45
'[' (91) 29 30 73 74 75 76 115 116 117 118 119 120 131
']' (93) 29 30 73 74 75 76 115 116 117 118 119 120 131
'^' (94)
'{' (123) 4 5 8 9 104 116 117 119 120
'|' (124)
'}' (125) 4 5 8 9 104 116 117 119 120
error (256)
OR (258) 51
AND (259) 49
EQUAL (260) 53
NOTEQUAL (261) 59
LESSER (262) 57
GREATER (263) 55
IF (264) 124
ELSE (265) 122
STRCONST (266) 82
INTCONST (267) 29 81 115 117 118 120
FLTCONST (268) 83
CHARCONST (269) 84
AUTO (270) 20
BREAK (271) 106
CASE (272)
CHAR (273) 15
CONST (274) 21
CONTINUE (275)
DEFAULT (276)
DO (277)
DOUBLE (278) 16
ENUM (279)
EXTERN (280) 22
FLOAT (281) 14
FOR (282)
INT (283) 13
LONG (284) 18
REGISTER (285) 23
RETURN (286) 97
SHORT (287) 19
SIGNED (288) 24
SIZEOF (289)
STATIC (290)
STRUCT (291)
SWITCH (292)
TYPEDEF (293)
UNION (294)
UNSIGNED (295) 25
VOID (296) 17
VOLATILE (297) 26
WHILE (298) 128
IDENTIFIER (299) 4 5 6 7 8 9 10 11 28 29 30 31 60 61 62 65 66 67 68
    73 74 75 76 89 90 100 101 102 103 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 129 130 131
INCREMENT (300) 65 67 75 100 102
DECREMENT (301) 66 68 76 101 103


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
S (68)
    on left: 1 2 3, on right: 0 1 2
func_def (69)
    on left: 4 5 6 7 8 9 10 11, on right: 1 99
multidec (70)
    on left: 12, on right: 2 93
datatype (71)
    on left: 13 14 15 16 17 18 19, on right: 4 5 6 7 8 9 10 11 12 28
    29 30 31
modifiers (72)
    on left: 20 21 22 23 24 25 26 27, on right: 4 5 6 7 8 9 10 11 12
    28 29 30 31
params_dec (73)
    on left: 28 29 30 31, on right: 32 33
params_list (74)
    on left: 32 33, on right: 4 6 8 10 33
brackets (75)
    on left: 34, on right: 71 72
expression (76)
    on left: 35 37 39 41 43 45 47 49 51 53 55 57 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73 74 75 76, on right: 34 37 39 41 43 45
    47 49 51 53 55 57 59 73 74 75 76 91 92 97 108 111 112 113 124 128
    129 130 131
$@1 (77)
    on left: 36, on right: 37
$@2 (78)
    on left: 38, on right: 39
$@3 (79)
    on left: 40, on right: 41
$@4 (80)
    on left: 42, on right: 43
$@5 (81)
    on left: 44, on right: 45
$@6 (82)
    on left: 46, on right: 47
$@7 (83)
    on left: 48, on right: 49
$@8 (84)
    on left: 50, on right: 51
$@9 (85)
    on left: 52, on right: 53
$@10 (86)
    on left: 54, on right: 55
$@11 (87)
    on left: 56, on right: 57
@12 (88)
    on left: 58, on right: 59
const_list (89)
    on left: 77 78, on right: 78 116 117 119 120
statement_list (90)
    on left: 79 80, on right: 4 5 8 9 80 104
constant (91)
    on left: 81 82 83 84, on right: 35 63 64 77 78
un_op (92)
    on left: 85 86 87 88, on right: 61 63 70 72 74
func_call (93)
    on left: 89 90, on right: 69 70 98
expression_list (94)
    on left: 91 92, on right: 89 92
statement (95)
    on left: 93 94 95 96 97 98 99 100 101 102 103 104 105 106, on right:
    79 80 122 124 128
id_chain (96)
    on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120,
    on right: 12 110 112 113 114 118 119 120
conditional (97)
    on left: 121 122, on right: 94
ifblock (98)
    on left: 124, on right: 121 122
$@13 (99)
    on left: 123, on right: 124
iterative (100)
    on left: 128, on right: 95
$@14 (101)
    on left: 125, on right: 128
$@15 (102)
    on left: 126, on right: 128
$@16 (103)
    on left: 127, on right: 128
assignment (104)
    on left: 129 130 131, on right: 96


State 0

    0 $accept: . S $end

    AUTO      shift, and go to state 1
    CONST     shift, and go to state 2
    EXTERN    shift, and go to state 3
    REGISTER  shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOLATILE  shift, and go to state 7

    $end      reduce using rule 3 (S)
    $default  reduce using rule 27 (modifiers)

    S          go to state 8
    func_def   go to state 9
    multidec   go to state 10
    modifiers  go to state 11


State 1

   20 modifiers: AUTO .

    $default  reduce using rule 20 (modifiers)


State 2

   21 modifiers: CONST .

    $default  reduce using rule 21 (modifiers)


State 3

   22 modifiers: EXTERN .

    $default  reduce using rule 22 (modifiers)


State 4

   23 modifiers: REGISTER .

    $default  reduce using rule 23 (modifiers)


State 5

   24 modifiers: SIGNED .

    $default  reduce using rule 24 (modifiers)


State 6

   25 modifiers: UNSIGNED .

    $default  reduce using rule 25 (modifiers)


State 7

   26 modifiers: VOLATILE .

    $default  reduce using rule 26 (modifiers)


State 8

    0 $accept: S . $end

    $end  shift, and go to state 12


State 9

    1 S: func_def . S

    AUTO      shift, and go to state 1
    CONST     shift, and go to state 2
    EXTERN    shift, and go to state 3
    REGISTER  shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOLATILE  shift, and go to state 7

    $end      reduce using rule 3 (S)
    $default  reduce using rule 27 (modifiers)

    S          go to state 13
    func_def   go to state 9
    multidec   go to state 10
    modifiers  go to state 11


State 10

    2 S: multidec . ';' S

    ';'  shift, and go to state 14


State 11

    4 func_def: modifiers . datatype IDENTIFIER '(' params_list ')' '{' statement_list '}'
    5         | modifiers . datatype IDENTIFIER '(' ')' '{' statement_list '}'
    6         | modifiers . datatype IDENTIFIER '(' params_list ')' ';'
    7         | modifiers . datatype IDENTIFIER '(' ')' ';'
    8         | modifiers . datatype '*' IDENTIFIER '(' params_list ')' '{' statement_list '}'
    9         | modifiers . datatype '*' IDENTIFIER '(' ')' '{' statement_list '}'
   10         | modifiers . datatype '*' IDENTIFIER '(' params_list ')' ';'
   11         | modifiers . datatype '*' IDENTIFIER '(' ')' ';'
   12 multidec: modifiers . datatype id_chain

    CHAR    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    FLOAT   shift, and go to state 17
    INT     shift, and go to state 18
    LONG    shift, and go to state 19
    SHORT   shift, and go to state 20
    VOID    shift, and go to state 21

    datatype  go to state 22


State 12

    0 $accept: S $end .

    $default  accept


State 13

    1 S: func_def S .

    $default  reduce using rule 1 (S)


State 14

    2 S: multidec ';' . S

    AUTO      shift, and go to state 1
    CONST     shift, and go to state 2
    EXTERN    shift, and go to state 3
    REGISTER  shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOLATILE  shift, and go to state 7

    $end      reduce using rule 3 (S)
    $default  reduce using rule 27 (modifiers)

    S          go to state 23
    func_def   go to state 9
    multidec   go to state 10
    modifiers  go to state 11


State 15

   15 datatype: CHAR .

    $default  reduce using rule 15 (datatype)


State 16

   16 datatype: DOUBLE .

    $default  reduce using rule 16 (datatype)


State 17

   14 datatype: FLOAT .

    $default  reduce using rule 14 (datatype)


State 18

   13 datatype: INT .

    $default  reduce using rule 13 (datatype)


State 19

   18 datatype: LONG .

    $default  reduce using rule 18 (datatype)


State 20

   19 datatype: SHORT .

    $default  reduce using rule 19 (datatype)


State 21

   17 datatype: VOID .

    $default  reduce using rule 17 (datatype)


State 22

    4 func_def: modifiers datatype . IDENTIFIER '(' params_list ')' '{' statement_list '}'
    5         | modifiers datatype . IDENTIFIER '(' ')' '{' statement_list '}'
    6         | modifiers datatype . IDENTIFIER '(' params_list ')' ';'
    7         | modifiers datatype . IDENTIFIER '(' ')' ';'
    8         | modifiers datatype . '*' IDENTIFIER '(' params_list ')' '{' statement_list '}'
    9         | modifiers datatype . '*' IDENTIFIER '(' ')' '{' statement_list '}'
   10         | modifiers datatype . '*' IDENTIFIER '(' params_list ')' ';'
   11         | modifiers datatype . '*' IDENTIFIER '(' ')' ';'
   12 multidec: modifiers datatype . id_chain

    '*'         shift, and go to state 24
    IDENTIFIER  shift, and go to state 25

    id_chain  go to state 26


State 23

    2 S: multidec ';' S .

    $default  reduce using rule 2 (S)


State 24

    8 func_def: modifiers datatype '*' . IDENTIFIER '(' params_list ')' '{' statement_list '}'
    9         | modifiers datatype '*' . IDENTIFIER '(' ')' '{' statement_list '}'
   10         | modifiers datatype '*' . IDENTIFIER '(' params_list ')' ';'
   11         | modifiers datatype '*' . IDENTIFIER '(' ')' ';'
  109 id_chain: '*' . IDENTIFIER
  111         | '*' . IDENTIFIER '=' expression

    IDENTIFIER  shift, and go to state 27


State 25

    4 func_def: modifiers datatype IDENTIFIER . '(' params_list ')' '{' statement_list '}'
    5         | modifiers datatype IDENTIFIER . '(' ')' '{' statement_list '}'
    6         | modifiers datatype IDENTIFIER . '(' params_list ')' ';'
    7         | modifiers datatype IDENTIFIER . '(' ')' ';'
  107 id_chain: IDENTIFIER .
  108         | IDENTIFIER . '=' expression
  115         | IDENTIFIER . '[' INTCONST ']'
  116         | IDENTIFIER . '[' ']' '=' '{' const_list '}'
  117         | IDENTIFIER . '[' INTCONST ']' '=' '{' const_list '}'

    '='  shift, and go to state 28
    '('  shift, and go to state 29
    '['  shift, and go to state 30

    $default  reduce using rule 107 (id_chain)


State 26

   12 multidec: modifiers datatype id_chain .
  110 id_chain: id_chain . ',' '*' IDENTIFIER
  112         | id_chain . ',' '*' IDENTIFIER '=' expression
  113         | id_chain . ',' IDENTIFIER '=' expression
  114         | id_chain . ',' IDENTIFIER
  118         | id_chain . ',' IDENTIFIER '[' INTCONST ']'
  119         | id_chain . ',' IDENTIFIER '[' ']' '=' '{' const_list '}'
  120         | id_chain . ',' IDENTIFIER '[' INTCONST ']' '=' '{' const_list '}'

    ','  shift, and go to state 31

    $default  reduce using rule 12 (multidec)


State 27

    8 func_def: modifiers datatype '*' IDENTIFIER . '(' params_list ')' '{' statement_list '}'
    9         | modifiers datatype '*' IDENTIFIER . '(' ')' '{' statement_list '}'
   10         | modifiers datatype '*' IDENTIFIER . '(' params_list ')' ';'
   11         | modifiers datatype '*' IDENTIFIER . '(' ')' ';'
  109 id_chain: '*' IDENTIFIER .
  111         | '*' IDENTIFIER . '=' expression

    '='  shift, and go to state 32
    '('  shift, and go to state 33

    $default  reduce using rule 109 (id_chain)


State 28

  108 id_chain: IDENTIFIER '=' . expression

    '&'         shift, and go to state 34
    '+'         shift, and go to state 35
    '-'         shift, and go to state 36
    '*'         shift, and go to state 37
    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INCREMENT   shift, and go to state 43
    DECREMENT   shift, and go to state 44
    '('         shift, and go to state 45
    '!'         shift, and go to state 46

    brackets    go to state 47
    expression  go to state 48
    constant    go to state 49
    un_op       go to state 50
    func_call   go to state 51


State 29

    4 func_def: modifiers datatype IDENTIFIER '(' . params_list ')' '{' statement_list '}'
    5         | modifiers datatype IDENTIFIER '(' . ')' '{' statement_list '}'
    6         | modifiers datatype IDENTIFIER '(' . params_list ')' ';'
    7         | modifiers datatype IDENTIFIER '(' . ')' ';'

    AUTO      shift, and go to state 1
    CONST     shift, and go to state 2
    EXTERN    shift, and go to state 3
    REGISTER  shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOLATILE  shift, and go to state 7
    ')'       shift, and go to state 52

    $default  reduce using rule 27 (modifiers)

    modifiers    go to state 53
    params_dec   go to state 54
    params_list  go to state 55


State 30

  115 id_chain: IDENTIFIER '[' . INTCONST ']'
  116         | IDENTIFIER '[' . ']' '=' '{' const_list '}'
  117         | IDENTIFIER '[' . INTCONST ']' '=' '{' const_list '}'

    INTCONST  shift, and go to state 56
    ']'       shift, and go to state 57


State 31

  110 id_chain: id_chain ',' . '*' IDENTIFIER
  112         | id_chain ',' . '*' IDENTIFIER '=' expression
  113         | id_chain ',' . IDENTIFIER '=' expression
  114         | id_chain ',' . IDENTIFIER
  118         | id_chain ',' . IDENTIFIER '[' INTCONST ']'
  119         | id_chain ',' . IDENTIFIER '[' ']' '=' '{' const_list '}'
  120         | id_chain ',' . IDENTIFIER '[' INTCONST ']' '=' '{' const_list '}'

    '*'         shift, and go to state 58
    IDENTIFIER  shift, and go to state 59


State 32

  111 id_chain: '*' IDENTIFIER '=' . expression

    '&'         shift, and go to state 34
    '+'         shift, and go to state 35
    '-'         shift, and go to state 36
    '*'         shift, and go to state 37
    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INCREMENT   shift, and go to state 43
    DECREMENT   shift, and go to state 44
    '('         shift, and go to state 45
    '!'         shift, and go to state 46

    brackets    go to state 47
    expression  go to state 60
    constant    go to state 49
    un_op       go to state 50
    func_call   go to state 51


State 33

    8 func_def: modifiers datatype '*' IDENTIFIER '(' . params_list ')' '{' statement_list '}'
    9         | modifiers datatype '*' IDENTIFIER '(' . ')' '{' statement_list '}'
   10         | modifiers datatype '*' IDENTIFIER '(' . params_list ')' ';'
   11         | modifiers datatype '*' IDENTIFIER '(' . ')' ';'

    AUTO      shift, and go to state 1
    CONST     shift, and go to state 2
    EXTERN    shift, and go to state 3
    REGISTER  shift, and go to state 4
    SIGNED    shift, and go to state 5
    UNSIGNED  shift, and go to state 6
    VOLATILE  shift, and go to state 7
    ')'       shift, and go to state 61

    $default  reduce using rule 27 (modifiers)

    modifiers    go to state 53
    params_dec   go to state 54
    params_list  go to state 62


State 34

   88 un_op: '&' .

    $default  reduce using rule 88 (un_op)


State 35

   86 un_op: '+' .

    $default  reduce using rule 86 (un_op)


State 36

   62 expression: '-' . IDENTIFIER
   64           | '-' . constant

    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 63

    constant  go to state 64


State 37

   87 un_op: '*' .

    $default  reduce using rule 87 (un_op)


State 38

   82 constant: STRCONST .

    $default  reduce using rule 82 (constant)


State 39

   81 constant: INTCONST .

    $default  reduce using rule 81 (constant)


State 40

   83 constant: FLTCONST .

    $default  reduce using rule 83 (constant)


State 41

   84 constant: CHARCONST .

    $default  reduce using rule 84 (constant)


State 42

   60 expression: IDENTIFIER .
   67           | IDENTIFIER . INCREMENT
   68           | IDENTIFIER . DECREMENT
   73           | IDENTIFIER . '[' expression ']'
   75           | IDENTIFIER . '[' expression ']' INCREMENT
   76           | IDENTIFIER . '[' expression ']' DECREMENT
   89 func_call: IDENTIFIER . '(' expression_list ')'
   90          | IDENTIFIER . '(' ')'

    INCREMENT  shift, and go to state 65
    DECREMENT  shift, and go to state 66
    '('        shift, and go to state 67
    '['        shift, and go to state 68

    $default  reduce using rule 60 (expression)


State 43

   65 expression: INCREMENT . IDENTIFIER

    IDENTIFIER  shift, and go to state 69


State 44

   66 expression: DECREMENT . IDENTIFIER

    IDENTIFIER  shift, and go to state 70


State 45

   34 brackets: '(' . expression ')'

    '&'         shift, and go to state 34
    '+'         shift, and go to state 35
    '-'         shift, and go to state 36
    '*'         shift, and go to state 37
    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INCREMENT   shift, and go to state 43
    DECREMENT   shift, and go to state 44
    '('         shift, and go to state 45
    '!'         shift, and go to state 46

    brackets    go to state 47
    expression  go to state 71
    constant    go to state 49
    un_op       go to state 50
    func_call   go to state 51


State 46

   85 un_op: '!' .

    $default  reduce using rule 85 (un_op)


State 47

   71 expression: brackets .

    $default  reduce using rule 71 (expression)


State 48

   37 expression: expression . '+' $@1 expression
   39           | expression . '*' $@2 expression
   41           | expression . '-' $@3 expression
   43           | expression . '/' $@4 expression
   45           | expression . '>' $@5 expression
   47           | expression . '<' $@6 expression
   49           | expression . AND $@7 expression
   51           | expression . OR $@8 expression
   53           | expression . EQUAL $@9 expression
   55           | expression . GREATER $@10 expression
   57           | expression . LESSER $@11 expression
   59           | expression . NOTEQUAL @12 expression
  108 id_chain: IDENTIFIER '=' expression .

    OR        shift, and go to state 72
    AND       shift, and go to state 73
    EQUAL     shift, and go to state 74
    NOTEQUAL  shift, and go to state 75
    '<'       shift, and go to state 76
    '>'       shift, and go to state 77
    LESSER    shift, and go to state 78
    GREATER   shift, and go to state 79
    '+'       shift, and go to state 80
    '-'       shift, and go to state 81
    '*'       shift, and go to state 82
    '/'       shift, and go to state 83

    $default  reduce using rule 108 (id_chain)


State 49

   35 expression: constant .

    $default  reduce using rule 35 (expression)


State 50

   61 expression: un_op . IDENTIFIER
   63           | un_op . constant
   70           | un_op . func_call
   72           | un_op . brackets
   74           | un_op . IDENTIFIER '[' expression ']'

    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 84
    '('         shift, and go to state 45

    brackets   go to state 85
    constant   go to state 86
    func_call  go to state 87


State 51

   69 expression: func_call .

    $default  reduce using rule 69 (expression)


State 52

    5 func_def: modifiers datatype IDENTIFIER '(' ')' . '{' statement_list '}'
    7         | modifiers datatype IDENTIFIER '(' ')' . ';'

    ';'  shift, and go to state 88
    '{'  shift, and go to state 89


State 53

   28 params_dec: modifiers . datatype IDENTIFIER
   29           | modifiers . datatype IDENTIFIER '[' INTCONST ']'
   30           | modifiers . datatype IDENTIFIER '[' ']'
   31           | modifiers . datatype '*' IDENTIFIER

    CHAR    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    FLOAT   shift, and go to state 17
    INT     shift, and go to state 18
    LONG    shift, and go to state 19
    SHORT   shift, and go to state 20
    VOID    shift, and go to state 21

    datatype  go to state 90


State 54

   32 params_list: params_dec .
   33            | params_dec . ',' params_list

    ','  shift, and go to state 91

    $default  reduce using rule 32 (params_list)


State 55

    4 func_def: modifiers datatype IDENTIFIER '(' params_list . ')' '{' statement_list '}'
    6         | modifiers datatype IDENTIFIER '(' params_list . ')' ';'

    ')'  shift, and go to state 92


State 56

  115 id_chain: IDENTIFIER '[' INTCONST . ']'
  117         | IDENTIFIER '[' INTCONST . ']' '=' '{' const_list '}'

    ']'  shift, and go to state 93


State 57

  116 id_chain: IDENTIFIER '[' ']' . '=' '{' const_list '}'

    '='  shift, and go to state 94


State 58

  110 id_chain: id_chain ',' '*' . IDENTIFIER
  112         | id_chain ',' '*' . IDENTIFIER '=' expression

    IDENTIFIER  shift, and go to state 95


State 59

  113 id_chain: id_chain ',' IDENTIFIER . '=' expression
  114         | id_chain ',' IDENTIFIER .
  118         | id_chain ',' IDENTIFIER . '[' INTCONST ']'
  119         | id_chain ',' IDENTIFIER . '[' ']' '=' '{' const_list '}'
  120         | id_chain ',' IDENTIFIER . '[' INTCONST ']' '=' '{' const_list '}'

    '='  shift, and go to state 96
    '['  shift, and go to state 97

    $default  reduce using rule 114 (id_chain)


State 60

   37 expression: expression . '+' $@1 expression
   39           | expression . '*' $@2 expression
   41           | expression . '-' $@3 expression
   43           | expression . '/' $@4 expression
   45           | expression . '>' $@5 expression
   47           | expression . '<' $@6 expression
   49           | expression . AND $@7 expression
   51           | expression . OR $@8 expression
   53           | expression . EQUAL $@9 expression
   55           | expression . GREATER $@10 expression
   57           | expression . LESSER $@11 expression
   59           | expression . NOTEQUAL @12 expression
  111 id_chain: '*' IDENTIFIER '=' expression .

    OR        shift, and go to state 72
    AND       shift, and go to state 73
    EQUAL     shift, and go to state 74
    NOTEQUAL  shift, and go to state 75
    '<'       shift, and go to state 76
    '>'       shift, and go to state 77
    LESSER    shift, and go to state 78
    GREATER   shift, and go to state 79
    '+'       shift, and go to state 80
    '-'       shift, and go to state 81
    '*'       shift, and go to state 82
    '/'       shift, and go to state 83

    $default  reduce using rule 111 (id_chain)


State 61

    9 func_def: modifiers datatype '*' IDENTIFIER '(' ')' . '{' statement_list '}'
   11         | modifiers datatype '*' IDENTIFIER '(' ')' . ';'

    ';'  shift, and go to state 98
    '{'  shift, and go to state 99


State 62

    8 func_def: modifiers datatype '*' IDENTIFIER '(' params_list . ')' '{' statement_list '}'
   10         | modifiers datatype '*' IDENTIFIER '(' params_list . ')' ';'

    ')'  shift, and go to state 100


State 63

   62 expression: '-' IDENTIFIER .

    $default  reduce using rule 62 (expression)


State 64

   64 expression: '-' constant .

    $default  reduce using rule 64 (expression)


State 65

   67 expression: IDENTIFIER INCREMENT .

    $default  reduce using rule 67 (expression)


State 66

   68 expression: IDENTIFIER DECREMENT .

    $default  reduce using rule 68 (expression)


State 67

   89 func_call: IDENTIFIER '(' . expression_list ')'
   90          | IDENTIFIER '(' . ')'

    '&'         shift, and go to state 34
    '+'         shift, and go to state 35
    '-'         shift, and go to state 36
    '*'         shift, and go to state 37
    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INCREMENT   shift, and go to state 43
    DECREMENT   shift, and go to state 44
    '('         shift, and go to state 45
    ')'         shift, and go to state 101
    '!'         shift, and go to state 46

    brackets         go to state 47
    expression       go to state 102
    constant         go to state 49
    un_op            go to state 50
    func_call        go to state 51
    expression_list  go to state 103


State 68

   73 expression: IDENTIFIER '[' . expression ']'
   75           | IDENTIFIER '[' . expression ']' INCREMENT
   76           | IDENTIFIER '[' . expression ']' DECREMENT

    '&'         shift, and go to state 34
    '+'         shift, and go to state 35
    '-'         shift, and go to state 36
    '*'         shift, and go to state 37
    STRCONST    shift, and go to state 38
    INTCONST    shift, and go to state 39
    FLTCONST    shift, and go to state 40
    CHARCONST   shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    INCREMENT   shift, and go to state 43
    DECREMENT   shift, and go to state 44
    '('         shift, and go to state 45
    '!'         shift, and go to state 46

    brackets    go to state 47
    expression  go to state 104
    constant    go to state 49
    un_op       go to state 50
    func_call   go to state 51


State 69

   65 expression: INCREMENT IDENTIFIER .

    $default  reduce using rule 65 (expression)


State 70

   66 expression: DECREMENT IDENTIFIER .

    $default  reduce using rule 66 (expression)


State 71

   34 brackets: '(' expression . ')'
   37 expression: expression . '+' $@1 expression
   39           | expression . '*' $@2 expression
   41           | expression . '-' $@3 expression
   43           | expression . '/' $@4 expression
   45           | expression . '>' $@5 expression
   47           | expression . '<' $@6 expression
   49           | expression . AND $@7 expression
   51           | expression . OR $@8 expression
   53           | expression . EQUAL $@9 expression
   55           | expression . GREATER $@10 expression
   57           | expression . LESSER $@11 expression
   59           | expression . NOTEQUAL @12 expression

    OR        shift, and go to state 72
    AND       shift, and go to state 73
    EQUAL     shift, and go to state 74
    NOTEQUAL  shift, and go to state 75
    '<'       shift, and go to state 76
    '>'       shift, and go to state 77
    LESSER    shift, and go to state 78
    GREATER   shift, and go to state 79
    '+'       shift, and go to state 80
    '-'       shift, and go to state 81
    '*'       shift, and go to state 82
    '/'       shift, and go to state 83
    ')'       shift, and go to state 105


State 72

   51 expression: expression OR . $@8 expression

    $default  reduce using rule 50 ($@8)

    $@8  go to state 106


State 73

   49 expression: expression AND . $@7 expression

    $default  reduce using rule 48 ($@7)

    $@7  go to state 107


State 74

   53 expression: expression EQUAL . $@9 expression

    $default  reduce using rule 52 ($@9)

    $@9  go to state 108


State 75

   59 expression: expression NOTEQUAL . @12 expression

    $default  reduce using rule 58 (@12)

    @12  go to state 109


State 76

   47 expression: expression '<' . $@6 expression

    $default  reduce using rule 46 ($@6)

    $@6  go to state 110


State 77

   45 expression: expression '>' . $@5 expression

    $default  reduce using rule 44 ($@5)

    $@5  go to state 111


State 78

   57 expression: expression LESSER . $@11 expression

    $default  reduce using rule 56 ($@11)

    $@11  go to state 112


State 79

   55 expression: expression GREATER . $@10 expression

    $default  reduce using rule 54 ($@10)

    $@10  go to state 113


State 80

   37 expression: expression '+' . $@1 expression

    $default  reduce using rule 36 ($@1)

    $@1  go to state 114


State 81

   41 expression: expression '-' . $@3 expression

    $default  reduce using rule 40 ($@3)
